--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 TOKEN=""
+# role ID to apply to everyone
 ROLE=""
+# server owner ID to stop unsuccessful actions on user
 OWNER=""
+# Debug mode 1 = true
+DEBUG=""
+
