env example update

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
+# Token for bot discord connection
 TOKEN=""
+# role ID to pinned users
+GOLD_ROLE=""
 # role ID to apply to everyone
 ROLE=""
-# server owner ID to stop unsuccessful actions on user
+# server owner details to stop unsuccessful actions
 OWNER=""
-# Debug mode 1 = true
+OWNERID=""
+# Show Debug info 1 = true
 DEBUG=""
-
