--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,6 @@ ROLE=""
 # server owner details to stop unsuccessful actions
 OWNER=""
 OWNERID=""
+SERVERID=""
 # Show Debug info 1 = true
 DEBUG=""
